eclipseWorkspace/.metadata/.plugins/org.eclipse.cdt.ui/16.02.13 Final Robot Code (untested).build.log
13:20:02 **** Incremental Build of configuration Debug for project 16.02.13 Final Robot Code (untested) ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\gsera/wpilib/cpp/current/include" "-IC:\\Users\\gsera\\Desktop\\FYRE-Programming-2015-2016\\eclipseWorkspace\\16.02.13 Final Robot Code (untested)\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
..\src\Robot.cpp: In member function 'virtual void Robot::RobotInit()':
..\src\Robot.cpp:85:9: warning: unused variable 'xValues' [-Wunused-variable]
   float xValues[800];
         ^
..\src\Robot.cpp:86:9: warning: unused variable 'yValues' [-Wunused-variable]
   float yValues[800];
         ^
..\src\Robot.cpp:87:9: warning: unused variable 'zValues' [-Wunused-variable]
   float zValues[800];
         ^
..\src\Robot.cpp:88:7: warning: unused variable 'autoCounter' [-Wunused-variable]
   int autoCounter;
       ^
..\src\Robot.cpp: In member function 'virtual void Robot::AutonomousInit()':
..\src\Robot.cpp:132:3: error: 'autoCounter' was not declared in this scope
   autoCounter = 0;
   ^
..\src\Robot.cpp: In member function 'virtual void Robot::AutonomousPeriodic()':
..\src\Robot.cpp:145:7: error: 'autoCounter' was not declared in this scope
    if(autoCounter<800) {
       ^
..\src\Robot.cpp:146:15: error: 'xValues' was not declared in this scope
     flightX = xValues[autoCounter];
               ^
..\src\Robot.cpp:147:15: error: 'yValues' was not declared in this scope
     flightY = yValues[autoCounter];
               ^
..\src\Robot.cpp:148:15: error: 'zValues' was not declared in this scope
     flightZ = zValues[autoCounter];
               ^
..\src\Robot.cpp:149:17: error: 'class RobotDrive' has no member named 'MechanumDrive_Cartesian'
     robotDrive->MechanumDrive_Cartesian(flightZ, flightY, flightX);
                 ^

13:20:04 Build Finished (took 1s.360ms)

